SAK-31549 - Ensure screen reader specific content is rendered off-screen (#3334)

--- a/jsf/jsf-resource/src/webapp/css/sakai.css
+++ b/jsf/jsf-resource/src/webapp/css/sakai.css
@@ -138,5 +138,3 @@ ul.attachList li
 
 /*subgroup 4.4 - not sure - not used?*/
 hr.itemSeparator{}
-.skip
-{display:inline;position:absolute;top:-999px;left:-999px;height:0}
